<resources>
    <string name="app_name">SuperMarket</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="crea_tu_lista_de_compras">Crea tu lista de compras</string>
    <string name="crear_lista">Crear lista</string>
    <string name="cree_su_lista_de_compras">Cree su lista de compras</string>
    <string name="bienvenido_a_la_segunda_pantalla">Bienvenido a la segunda pantalla</string>
    <string name="agrega_tus_productos">Agrega tus productos</string>
    <string name="nombre_producto">Nombre_Producto:</string>
    <string name="regresar">Regresar</string>
    <string name="producto">Producto:</string>
    <string name="agregar">Agregar</string>
    <string name="finalizar">Finalizar</string>
    <string name="precio">Precio:</string>
</resources>